--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -1872,8 +1872,8 @@ body .container.body .right_col {
 }
 
 .nav_title {
-    width: 230px;
-    float: left;
+    //width: 230px;
+    //float: left;
     background: #2A3F54;
     border-radius: 0;
     height: 57px;
@@ -2062,7 +2062,7 @@ body .container.body .right_col {
 
 body {
     color: #73879C;
-    background: #2A3F54;
+    //background: #2A3F54;
     font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
     font-size: 13px;
     font-weight: 400;
