--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -2409,11 +2409,14 @@ a:focus {
 .nav.child_menu li li.active {
     background: none;
 }
-
+.nav.child_menu li a:hover,
+.nav.child_menu li a.active,
 .nav.child_menu li li a:hover,
 .nav.child_menu li li a.active {
     color: #fff;
+    font-weight:bold;
 }
+
 
 .nav>li>a {
     position: relative;
@@ -2424,6 +2427,7 @@ a:focus {
 .nav.side-menu>li.current-page,
 .nav.side-menu>li.active {
     border-right: 5px solid #1ABB9C;
+    display: block;
 }
 
 .nav li.current-page {
