--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -2062,7 +2062,7 @@ body .container.body .right_col {
 
 body {
     color: #73879C;
-    //background: #2A3F54;
+    background: #2A3F54;
     font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
     font-size: 13px;
     font-weight: 400;
@@ -2359,6 +2359,7 @@ a:focus {
 
 .nav.child_menu {
     display: none;
+    position: relative;
 }
 
 .nav.child_menu li:hover,
@@ -2375,8 +2376,8 @@ a:focus {
     bottom: auto;
     content: "";
     height: 8px;
-    left: 23px;
-    margin-top: 15px;
+    left: 18px;
+    margin-top: 13px;
     position: absolute;
     right: auto;
     width: 8px;
@@ -2390,7 +2391,7 @@ a:focus {
     border-left: 1px solid #425668;
     bottom: 0;
     content: "";
-    left: 27px;
+    left: 22px;
     position: absolute;
     top: 0;
 }
@@ -2399,8 +2400,8 @@ a:focus {
     bottom: 50%;
 }
 
-.nav.side-menu>li>a,
-.nav.child_menu>li>a {
+.nav.side-menu>li>div a,
+.nav.child_menu>li>div a {
     color: #E7E7E7;
     font-weight: 500;
 }
@@ -2418,12 +2419,16 @@ a:focus {
 }
 
 
-.nav>li>a {
+.nav>li>div>a {
     position: relative;
     display: block;
     padding: 13px 15px 12px;
 }
-
+.nav.child_menu>li a {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 12px;
+    padding: 9px;
+}
 .nav.side-menu>li.current-page,
 .nav.side-menu>li.active {
     border-right: 5px solid #1ABB9C;
@@ -2442,7 +2447,7 @@ a:focus {
     color: #fff;
 }
 
-.nav.side-menu>li.active>a {
+.nav.side-menu>li.active>div>a {
     text-shadow: rgba(0, 0, 0, 0.25) 0 -1px 0;
     background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5b6479), color-stop(100%, #4c5566)), #686e78;
     background: -webkit-linear-gradient(#334556, #2C4257), #2A3F54;
@@ -2539,12 +2544,6 @@ a:focus {
 
 .toggle a i {
     font-size: 26px;
-}
-
-.nav.child_menu>li>a {
-    color: rgba(255, 255, 255, 0.75);
-    font-size: 12px;
-    padding: 9px;
 }
 
 .panel_toolbox {
