filter using vue-multiSelect

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -4249,12 +4249,12 @@ select.parsley-error {
     display: flex;
 }
 
-.item input,
-.item textarea {
-    -webkit-transition: 0.42s;
-    -moz-transition: 0.42s;
-    transition: 0.42s;
-}
+// .item input,
+// .item textarea {
+//     -webkit-transition: 0.42s;
+//     -moz-transition: 0.42s;
+//     transition: 0.42s;
+// }
 
 /* alerts (when validation fails) */
 
