--- a/src/assets/sass/_reboot.scss
+++ b/src/assets/sass/_reboot.scss
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Noto Sans KR', sans-serif;
+}
 ul,
 ol {
     padding: 0
@@ -18,3 +21,4 @@ textarea {
 }
 
 .tr{text-align: right;}
+img{width:100%; max-width: 100%;}
